Remove sale place info from events table
