# api/models/Event.js
@@ -73,26 +73,26 @@ const Event = {
         return db.query(options, callback);
     },
 
-    postEvent(Body, File, Uuid, PlacePhoneNumber, callback) {
-        const sql = 'INSERT INTO `event` (`uuid`, `status`, `created_at`, `updated_at`, `title`, `url_image`, `place`, `place_phone`, `date`, `address`, `city`, `id_category`, `id_sale_place`) VALUES ?';
+    postEvent(Body, File, Uuid, callback) {
+        const sql = 'INSERT INTO `event` (`uuid`, `status`, `created_at`, `updated_at`, `title`, `url_image`, `date`, `address`, `city`, `id_category`, `id_sale_place`) VALUES ?';
 
         const values = [
-            [Uuid, Body.status, new Date(), new Date(), Body.title, File.path, Body.place, PlacePhoneNumber, Body.date, Body.address, Body.city, Body.id_category, Body.id_sale_place]
+            [Uuid, Body.status, new Date(), new Date(), Body.title, File.path, Body.date, Body.address, Body.city, Body.id_category, Body.id_sale_place]
         ];
 
         return db.query(sql, [values], callback);
     },
 
-    putEvent(Uuid, PlacePhoneNumber, Body, File, callback) {
+    putEvent(Uuid, Body, File, callback) {
         let sql = '';
         let values = '';
 
         if (File !== undefined) {
-            sql += 'UPDATE event SET status=?, updated_at=?, title=?, url_image=?, place=?, place_phone=?, date=?, address=?, city=?, id_category=?, id_sale_place=? where uuid=?';
-            values = [Body.status, new Date(), Body.title, File.path, Body.place, PlacePhoneNumber, Body.date, Body.address, Body.city, Body.id_category, Body.id_sale_place, Uuid];
+            sql += 'UPDATE event SET status=?, updated_at=?, title=?, url_image=?, date=?, address=?, city=?, id_category=?, id_sale_place=? where uuid=?';
+            values = [Body.status, new Date(), Body.title, File.path, Body.date, Body.address, Body.city, Body.id_category, Body.id_sale_place, Uuid];
         } else {
-            sql += 'UPDATE event SET status=?, updated_at=?, title=?, place=?, place_phone=?, date=?, address=?, city=?, id_category=?, id_sale_place=? where uuid=?';
-            values = [Body.status, new Date(), Body.title, Body.place, PlacePhoneNumber, Body.date, Body.address, Body.city, Body.id_category, Body.id_sale_place, Uuid];
+            sql += 'UPDATE event SET status=?, updated_at=?, title=?, date=?, address=?, city=?, id_category=?, id_sale_place=? where uuid=?';
+            values = [Body.status, new Date(), Body.title, Body.date, Body.address, Body.city, Body.id_category, Body.id_sale_place, Uuid];
         }
 
         return db.query(sql, values, callback);
